tests/rt/pos/ifc/tostringlabeled04.trp
let val x = 42 raisedTo {alice} 
    val y = 11 raisedTo {bob} 
    val s = toStringL (x,y) 
   
in printWithLabels s
end
