tests/rt/neg/ifc/notenoughauthority.trp
let val x = 42 raisedTo {alice}
    val authAlice = attenuate (authority, {bob})
    val y = declassify (x, authAlice, {})
in y 
end